--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -18,7 +18,6 @@
   animation-name: bottom;
   animation-duration: 1s;
   animation-fill-mode: forwards;
-  transform: rotate(-45deg);
 }
 
 nav {
@@ -31,8 +30,11 @@ nav {
 }
 
 @keyframes top {
-  from {}
-  to {}
+  from {
+    transform: rotate(0deg) 
+  }
+  to {transform: rotate(45deg)translate(24px, 24px);
+  }
 }
 
 @keyframes middle {
@@ -41,6 +43,10 @@ nav {
 }
 
 @keyframes bottom {
-  from {}
-  to {}
+  from {
+    transform:rotate(0deg)
+  }
+  to {
+    transform: rotate(-45deg) translate(24px, -24px);
+  }
 }
